--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <nav class="main-nav">
         <a class="logo" href="./index.html" lang="en"> <span class="web-text">Web</span>Studio</a>
         <ul class="head-link">
-          <li><a class="link" href="#">Студія</a></li>
+          <li><a class="link" href="./index.html">Студія</a></li>
           <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
           <li><a class="link" href="#">Контакти</a></li>
         </ul>
@@ -43,25 +43,26 @@
         <h2 class="our-special">Наші особливості</h2>
         <ul class="list">
           <li class="item">
-            <h3 class="firs-reason">Увага до деталей</h3>
-            <p class="meaning">Ідейні міркування, та навіть початок повсякденної роботи з формування позиції.</p>
+            <h3 class="firs-reason-1">Увага до деталей</h3>
+            <p class="meaning-1">Ідейні міркування, та навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li class="item">
-            <h3 class="firs-reason">Пунктуальність</h3>
-            <p class="meaning">Завдання організації,особливо рамки та місце навчання кадрів тягне у себе.</p>
+            <h3 class="firs-reason-1">Пунктуальність</h3>
+            <p class="meaning-1">Завдання організації,особливо рамки та місце навчання кадрів тягне у себе.</p>
           </li>
           <li class="item">
-            <h3 class="firs-reason">Планування</h3>
-            <p class="meaning">Так само кунсультація з широким активом зумовлює.</p>
+            <h3 class="firs-reason-1">Планування</h3>
+            <p class="meaning-1">Так само кунсультація з широким активом зумовлює.</p>
           </li>
           <li class="item">
-            <h3 class="firs-reason">Сучасні технології</h3>
-            <p class="meaning">Значимість цих проблем настільки очевидна, що реалізація планових завдань</p>
+            <h3 class="firs-reason-1">Сучасні технології</h3>
+            <p class="meaning-1">Значимість цих проблем настільки очевидна, що реалізація планових завдань</p>
           </li>
         </ul>
       </div>
     </section>
     <section class="section">
+      <div class="container">
       <h2 class="our-specials">Чим ми займаємося</h2>
       <ul class="photo">
         <li><img class="pr-image" src="./img/section_1/img2.jpg" alt="Тестування мобільних додатків" width="370" />
@@ -70,9 +71,10 @@
         <li><img class="pr-image" src="./img/section_1/img1.jpg" alt="Розробка програмного забезпечення" width="370" />
         </li>
       </ul>
+      </div>
     </section>
     <section class="team">
-      <div class="container-2">
+      <div class="container container-2">
         <h2 class="our-specials">Наша команда</h2>
         <ul class="team-descr">
           <li class="team-item"><img class="pr-image" src="./img/section_2/img2_1.jpg" alt="Дизайнер" width="270" />
