--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <nav class="main-nav">
                 <a class="logo" href="./index.html" lang="en"> <span class="web-text">Web</span>Studio</a>
                 <ul class="head-link">
-                    <li><a class="link" href="#">Студія</a></li>
+                    <li><a class="link" href="./index.html">Студія</a></li>
                     <li><a class="link" href="./portfolio.html">Портфоліо</a></li>
                     <li><a class="link" href="#">Контакти</a></li>
                 </ul>
@@ -38,8 +38,8 @@
         </div>
     </header>
     <main>
-        <section class="section portfolio">
-            <div class="container-2">
+        <section class="section-portfolio">
+            <div class="container container-container-2">
                 <h1 class="our-special">Портфолио</h1>
                 <ul class="buttons">
                     <li><button class="button-pf" type="button">Усі</button></li>
