--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </ul>
       </div>
     </section>
-    <section class="section">
+    <section class="section-1">
       <div class="container">
       <h2 class="our-specials">Чим ми займаємося</h2>
       <ul class="photo">
