--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
       <div class="container">
       <h2 class="our-specials">Чим ми займаємося</h2>
       <ul class="photo">
-        <li><img class="pr-image" src="./img/section_1/img2.jpg" alt="Тестування мобільних додатків" width="370" />
+        <li><img  src="./img/section_1/img2.jpg" alt="Тестування мобільних додатків" width="370" />
         </li>
-        <li><img class="pr-image" src="./img/section_1/img3.jpg" alt="Підбір кольорової гамми" width="370" /></li>
-        <li><img class="pr-image" src="./img/section_1/img1.jpg" alt="Розробка програмного забезпечення" width="370" />
+        <li><img  src="./img/section_1/img3.jpg" alt="Підбір кольорової гамми" width="370" /></li>
+        <li><img  src="./img/section_1/img1.jpg" alt="Розробка програмного забезпечення" width="370" />
         </li>
       </ul>
       </div>
