--- a/portfolio.html
+++ b/portfolio.html
@@ -57,56 +57,56 @@
                         </div>
                     </li>
                     <li class="proj-element"><img  src="./img/img_1.jpg"
-                            alt="Постер New Orlean vs Golden Star" width="270" />
+                            alt="Постер New Orlean vs Golden Star" width="370" />
                         <div class="sighn">
                             <h2 class="firs-reason-pf">Постер New Orlean vs Golden Star</h2>
                             <p class="meaning-pf">Дизайн</p>
                         </div>
                     </li>
-                    <li class="proj-element"><img rc="./img/img_2.jpg" alt="Ресторан Seafood"
-                            width="270" />
+                    <li class="proj-element"><img src="./img/img_2.jpg" alt="Ресторан Seafood"
+                            width="370" />
                         <div class="sighn">
                             <h2 class="firs-reason-pf">Ресторан Seafood</h2>
                             <p class="meaning-pf">Додаток</p>
                         </div>
                     </li>
                     <li class="proj-element"><img src="./img/img_3.jpg" alt="Проект Prime"
-                            width="270" />
+                            width="370" />
                         <div class="sighn">
                             <h2 class="firs-reason-pf">Проект Prime</h2>
                             <p class="meaning-pf">Маркетинг</p>
                         </div>
                     </li>
                     <li class="proj-element"><img  src="./img/img-4.jpg" alt="Проект Boxes"
-                            width="270" />
+                            width="370" />
                         <div class="sighn">
                             <h2 class="firs-reason-pf">Проект Boxes</h2>
                             <p class="meaning-pf">Додаток</p>
                         </div>
                     </li>
                     <li class="proj-element"><img  src="./img/img_5.jpg"
-                            alt="Inspiration has no Borders" width="270" />
+                            alt="Inspiration has no Borders" width="370" />
                         <div class="sighn">
                             <h2 class="firs-reason-pf">Inspiration has no Borders</h2>
                             <p class="meaning-pf">Веб-сайт</p>
                         </div>
                     </li>
                     <li class="proj-element"><img  src="./img/img_6.jpg"
-                            alt="Видання Limited Edition" width="270" />
+                            alt="Видання Limited Edition" width="370" />
                         <div class="sighn">
                             <h2 class="firs-reason-pf">Видання Limited Edition</h2>
                             <p class="meaning-pf">Дизайн</p>
                         </div>
                     </li>
                     <li class="proj-element"><img  src="./img/img_7.jpg" alt="Проект LAB"
-                            width="270" />
+                            width="370" />
                         <div class="sighn">
                             <h2 class="firs-reason-pf">Проект LAB</h2>
                             <p class="meaning-pf">Маркетинг</p>
                         </div>
                     </li>
                     <li class="proj-element"><img  src="./img/img_8.jpg" alt="Growing Business"
-                            width="270" />
+                            width="370" />
                         <div class="sighn">
                             <h2 class="firs-reason-pf">Growing Business</h2>
                             <p class="meaning-pf">Додаток</p>
